syntax = "proto3";

package com.road.yishi.proto.item;

message ItemUseStoreReqMsg {
  int32 count = 1;
}
